--- a/twitter-app/build.gradle
+++ b/twitter-app/build.gradle
@@ -7,6 +7,7 @@ jar {
 }
 
 dependencies {
+    compile project(':twitter-domain')
     compile('org.springframework.boot:spring-boot-starter-web')
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
