add and update Tweet

--- a/twitter-app/build.gradle
+++ b/twitter-app/build.gradle
@@ -11,4 +11,6 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
+    compile("org.springframework.boot:spring-boot-devtools")
 }
