--- a/twitter-app/src/main/resources/application-local.properties
+++ b/twitter-app/src/main/resources/application-local.properties
@@ -8,3 +8,8 @@ spring.datasource.url=jdbc:h2:mem:twitter
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+@Hibernate
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
