--- a/twitter-app/src/main/resources/application.properties
+++ b/twitter-app/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.profiles.active=local
 # Server
 server.port=8080
 server.context-path=/api
+debug=false
+
+# Server-Dev
+spring.devtools.livereload.enabled=true
+
