--- a/twitter-app/src/main/resources/application-local.properties
+++ b/twitter-app/src/main/resources/application-local.properties
@@ -4,7 +4,10 @@ spring.h2.console.enabled=true
 
 # Datasource
 spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:mem:twitter
+spring.datasource.url=jdbc:h2:mem:twitter;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+# Hibernate
+spring.jpa.show-sql=true
