--- a/twitter-app/src/main/resources/application.properties
+++ b/twitter-app/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.profiles.active=local
 # Server
 server.port=8080
 server.context-path=/api
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
