--- a/twitter-domain/build.gradle
+++ b/twitter-domain/build.gradle
@@ -7,7 +7,8 @@ bootRepackage {
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-jdbc')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('javax.validation:validation-api')
     runtime('com.h2database:h2')
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
