--- a/twitter-domain/build.gradle
+++ b/twitter-domain/build.gradle
@@ -8,7 +8,9 @@ bootRepackage {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-jdbc')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
     runtime('com.h2database:h2')
+    testCompile('javax.xml.bind:jaxb-api')
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
