--- a/twitter-domain/build.gradle
+++ b/twitter-domain/build.gradle
@@ -7,6 +7,7 @@ bootRepackage {
 }
 
 dependencies {
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-jdbc')
     runtime('com.h2database:h2')
     compileOnly('org.projectlombok:lombok')
