--- a/twitter-app/src/main/resources/application-local.properties
+++ b/twitter-app/src/main/resources/application-local.properties
@@ -8,3 +8,6 @@ spring.datasource.url=jdbc:h2:mem:twitter
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = none
