--- a/twitter-domain/build.gradle
+++ b/twitter-domain/build.gradle
@@ -8,7 +8,7 @@ bootRepackage {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.springframework.boot:spring-boot-starter-jdbc')
+    compile('javax.validation:validation-api')
     runtime('com.h2database:h2')
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
