--- a/twitter-app/src/main/resources/application-local.properties
+++ b/twitter-app/src/main/resources/application-local.properties
@@ -10,4 +10,4 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.show-sql=true
