simple oauth server

--- a/twitter-app/build.gradle
+++ b/twitter-app/build.gradle
@@ -8,6 +8,7 @@ jar {
 
 dependencies {
     compile project(':twitter-domain')
+//    compile project(':twitter-auth')
     compile('org.springframework.boot:spring-boot-starter-web')
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
