--- a/twitter-web/package.json
+++ b/twitter-web/package.json
@@ -3,26 +3,38 @@
   "version": "1.0.0",
   "description": "Front-end application",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
+    "www": "node server",
+    "clean": "cross-env rimraf dist",
+    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "npm run clean && webpack --config webpack.prod.js"
   },
   "devDependencies": {
-    "@material-ui/core": "^3.0.0",
-    "@material-ui/icons": "^3.0.0",
-    "express": "^4.16.3",
-    "jss": "^9.8.7",
-    "lodash": "^4.17.11",
-    "next": "^7.0.0",
-    "next-redux-wrapper": "^2.0.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-jss": "^8.6.1",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "redux-saga": "^0.16.0",
-    "styled-jsx": "^3.0.2"
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.5",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "copy-webpack-plugin": "4.5.4",
+    "cross-env": "5.2.0",
+    "html-webpack-plugin": "3.2.0",
+    "rimraf": "2.6.2",
+    "webpack": "4.22.0",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-server": "3.1.9",
+    "webpack-merge": "4.1.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@material-ui/core": "3.0.0",
+    "@material-ui/icons": "3.0.0",
+    "express": "4.16.3",
+    "history": "4.7.2",
+    "lodash": "4.17.11",
+    "prop-types": "15.6.2",
+    "react": "16.5.1",
+    "react-dom": "16.5.1",
+    "react-redux": "5.0.7",
+    "react-router-dom": "4.3.1",
+    "redux": "4.0.0"
+  }
 }
