--- a/twitter-app/build.gradle
+++ b/twitter-app/build.gradle
@@ -9,6 +9,12 @@ jar {
 dependencies {
     compile project(':twitter-domain')
     compile('org.springframework.boot:spring-boot-starter-web')
+
+    compile("org.springframework.boot:spring-boot-starter-security")
+    compile("org.springframework.security.oauth:spring-security-oauth2")
+    compile('org.springframework.security:spring-security-jwt')
+
+
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
