--- a/twitter-domain/build.gradle
+++ b/twitter-domain/build.gradle
@@ -7,6 +7,10 @@ bootRepackage {
 }
 
 dependencies {
+    compile("org.springframework.boot:spring-boot-starter-security")
+    compile("org.springframework.security.oauth:spring-security-oauth2")
+    compile('org.springframework.security:spring-security-jwt')
+
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('javax.validation:validation-api')
     runtime('com.h2database:h2')
