--- a/twitter-app/src/main/resources/application.properties
+++ b/twitter-app/src/main/resources/application.properties
@@ -4,6 +4,12 @@ spring.profiles.active=local
 server.port=8080
 server.context-path=/api
 
+# Auth
+social.github.client-id=c0ce3d42b5fd7df0c351
+social.github.client-secret=63731149245c2589b9cd92790530106df92df6ca
+social.github.redirect-uri=http://localhost:8080/api/auth/github-callback
+social.github.scope=read:user
+
 # Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
