--- a/twitter-app/build.gradle
+++ b/twitter-app/build.gradle
@@ -9,6 +9,11 @@ jar {
 dependencies {
     compile project(':twitter-domain')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile 'io.jsonwebtoken:jjwt-api:0.10.5'
+    runtime 'io.jsonwebtoken:jjwt-impl:0.10.5',
+            // Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
+            //'org.bouncycastle:bcprov-jdk15on:1.60',
+            'io.jsonwebtoken:jjwt-jackson:0.10.5'
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
